tests/compile_fail/state_init_no_space.stderr
error: #[account(init)] requires `space = <expr>`
  --> tests/compile_fail/state_init_no_space.rs:19:9
   |
19 |     pub vault: Vault,
   |         ^^^^^
